During upsert, don't give an NPE if the record doesn't contain value.… (#92)
… Ignore like other sinks.